<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclada</name>
  <version>0.1.0</version>
  <description>Ada ROS2 Client Library</description>
  <maintainer email="amosteo@unizar.es">Alejandro R. Mosteo</maintainer>
  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>

  <depend>rclada_common</depend>

  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_generator_ada</depend>
  <depend>rosidl_generator_c</depend>
  <depend>rosidl_typesupport_interface</depend>

  <depend>std_msgs</depend>

   <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
